--- a/DeepLinking/Base.lproj/Main.storyboard
+++ b/DeepLinking/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="430" y="66"/>
+            <point key="canvasLocation" x="428.98550724637687" y="65.625"/>
         </scene>
     </scenes>
     <resources>
